# highqa-panel

./: .gitignore  app.env  highqapanel.key  highqapanel.key.pub  index.js  package-lock.json  package.json  path.txt  release.json  server.js  updater.js
content/: index.html  index2.html  index3.html
content/css/: expand.css  grids.css  keyboard.css  loading.css  setup.css  sidebar.css  tables.css
content/css/alerts/: alerts.css  info.css
content/css/depts/: engi.css  qual.css  shop.css
content/css/fonts/: fonts.css
content/css/fonts/metropolis/: style.css
content/css/fonts/montserrat/: style.css
content/css/img/: Thumbs.db
content/css/menus/: console.css  planner.css
content/css/popups/: input.css  login.css  merge.css  more.css  popups.css  quantity.css  realtrac.css  spc.css  updater.css
content/js/: main.js
content/js/debug/: d2est.js  debug.js  engi2.js
content/js/lib/: ef.js  openapi.json
content/js/modules/: hqa_api.js  hqa_cache.js  hqa_cache2.js  hqa_model.js  minitab.js  realtrac.js  samples.js  xdfx.js
content/js/ui/: input.js  login.js  people.js  planner.js  prompts.js  quantity.js  serialize.js  spc.js
content/js/ui/depts/: engi.js  qual.js  shop.js
src-tauri/: Cargo.toml  build.rs  main.txt  main.wxs  main2.wxs  tauri.conf.json
src-tauri/src/: main.rs  node_hqa.js
src-tauri/src/sidecar/: Thumbs.db  index.js  move-binary.js  package.json
