[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.2", features = [] }

[dependencies]
tiberius = { version = "0.10.0", features = [ "sql-browser-async-std", "tds73", "chrono" ] }
serde_json = "1.0"
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "mssql" ] }
tauri = { version = "1.0.5", features = ["api-all"] }
chrono = { version = "0.4", features = ["serde", "rustc-serialize" ] }
lazy_static = "1.4.0"
async_once = "0.2.6"
tauri-build = "1.0.4"
#poppler = "0.3.2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]
